package com.logparser.classifier;

public enum LogType {
    APM,
    APPLICATION,
    REQUEST,
    UNKNOWN
}
