package com.logparser.models;

public record APMModel(String timestamp, String metric, double value) {
}
