package com.logparser.models;

public record AppLogModel(String timestamp, String level, String message) {
}
